# nkrCV

./: CMakeLists.txt  README.CN.md  README.md  test_match_location.cpp
utils/: nkr.cpp  nkr.h
